<resources>
    <string name="layout_main_text1">
        Welcome to
        \nBoxers Seals and Bearings
        \napplication
    </string>
    <string name="layout_main_text2">
        In this app you can find information about seals and bearings using in different models of
        old Soviet boxers: catalogue part numbers, dimencions and information about existing
        alternative parts for replacement
    </string>
    <string name="layout_main_text3">
        Select branch according with period of production, manufacturer and engine type and capacity
        of your motorcycle
    </string>
    <string name="layout_main_text4">
        Old Soviet Boxers(1941-1994)
    </string>
    <string name="layout_main_text5">
        Late Russian 650CC и 720CC boxers
        \n(since 1991)
    </string>
    <string name="layout_main_text6">Modern Russian 750CC boxers (since 1998)</string>
    <string name="about_app">About application</string>
    <string name="buttonSV">750CC SV</string>
    <string name="button650ccIMZ">650CC OHV ИМЗ</string>
    <string name="button650ccKMZ">650CC OHV КМЗ</string>
    <string name="button650_720ccOHV">650CC и 720CC OHV</string>
    <string name="button750ccOHV">750CC OHV</string>
    <string name="different_things">Different things</string>
    <string name="about_app_text0">
        1. About application
    </string>
    <string name="about_app_text1">
        This application is something like a table with seals and bearings using in old Soviet
        boxers and alternative replacers, but modified and made as phone application
    </string>
    <string name="about_app_text2">
        1. First of all - dose of bad form. But this is IMPORTANT
    </string>
    <string name="about_app_text3">
        In GooglePlay you can find this app in 2 versions: free and paid. Paid version have no any
         advantages or bonus futures. Free and paid versions are the same. Downloading of paid
        version - it is donate for this app. If the app was useful for somebody and he like
        this app, and, at the same time, he have financial opportunity and wish to help with development
        and updateing of app, so he can download paid version
    </string>
    <string name="about_app_text4">
        2.1 Current application version:
    </string>
    <string name="about_app_text4_0">1.01 free version</string>
    <string name="about_app_text4_1">
        2.2 What localisations are existing
    </string>
    <string name="about_app_text5">
        App available in 2 languages:
    </string>
    <string name="about_app_what_updates">
        2.3 What was fixed, changed and added in last update
    </string>
    <string name="about_app_updates">
        \n     First little hot-fix:
        \n
        \n     Fixed:
        \n  1. Year of end of manufacturing of M-72 model changed to 1957, of M-72M model changed to 1960
        \n  2. Bug with 1 journal bearing in all SV and most of Urals models engines was fixed
        \n  3. Bug with MT-10-36 type engine opening error was fixed
        \n  4. Feature when  picture  become big and fill the screen when you change orientation
        of phone to horisontal was deleted from description in "About app" page. At first, all the
        same it doesent worked in most of Android versions. And secondly, whole page will turning
        instead of it (look paragraph below)
        \n  5. Fixing of bad visualisation of screen content in phones and tablets with large high
        resolution screens is started. Indents of texts and pictures from border of screen in
        phones and tablets large screens  should to stop to be so large, and should to become more
        or less the same for most of devices. In this update to that new content visualisation form
        are already  changed main screens of motorsycles models and pages of
        units (engines, gearboxes, final drives, frames and wheels)
        \n
        \n      Updates:
        \n   1. Information about possebility to donate the app with downloading of paid version
        of app was deleted from "About app" page. Because paid version still not existing
        on Google Play. And, maybe, paid version will never exist
        \n   5. Paragraph with specifying of fixes and changes of last update  was added to "About app" page
        \n   6. Updated list of what is planning to add to app in future
    </string>
    <string name="about_app_text5_1">
        2.4 About one feauture of app interface
    </string>
    <string name="about_app_text5_2">
        If you see in app screen picture, which is too small, to see details in it, try to turn
        phone to horisontal position. Usually, after that the picture become bigger and
        fill the screen
    </string>
    <string name="about_app_text5_3">
        For return of previous small size of the picture turn phone to vertical position again
    </string>
    <string name="about_app_text7">
        3. Few words about from what resources was taken information for the app
    </string>
    <string name="about_app_text8">
          Original users manuals, spare parts catalogues and army repair and maintenance guides of
        М-72, М-72Н, К-750, К-750В, МВ-750, К-750М, М-63, К-650, М-66, МТ-9,
        МВ-750М, МТ-10, МТ-10-36, М-67-36, МВ-650М, МТ-11, МТ-12, МТ-16 и ИМЗ 8.103.
        Most of these literature was found in <b>ghost.in.ua</b> website.

        \n  M-72 original drawings. You can find in internet and download em free.

        \n  <b>oppozit.ru</b> website forum. Where I would like to tell about topic of forum user
        Creazyhead \" Урал/Днепр. Подшипники и их импортные аналоги \" from what that app was beginning.
        Additionally in that website was found part of used for app literature.
        \n  Some content for app i found in easthighway.com, moto-boxer.com and maxbmwmotorcycles.com websites.
        \n  Thanks to my friend and comrade in boxers Viktor for part of used literature. And for info about M-72 models.
        \n  Thanks to Dmitry Faust for info about Dneprs models
    </string>
    <string name="about_app_text9">
        4. Now few words about what updates are planned
    </string>
    <string name="about_app_text10">
        I. In closest time and 100%:
    </string>
    <string name="about_app_text11">
        - adding of Polish language:
    </string>
    <string name="about_app_text12">
        II. In somewhat more distant future and with doubts:
    </string>
    <string name="about_app_text13">
        -adding of French language:
    </string>
    <string name="about_app_text14">
        -adding of valves and valves guides
    </string>
    <string name="about_app_text15">
        III. In far foggy future:
    </string>
    <string name="about_app_text16">
        - adding of Ukrainian language:
    </string>
    <string name="about_app_text17">
        - drawing and adding of new drawings of models М-61, М-62, М-67, М-67-36
        \n- adding of models ИМЗ-8.103-30 и ИМЗ-8.103-10
    </string>
    <string name="about_app_text18">
        IV. Fantasy:
    </string>
    <string name="about_app_text19">
        - adding of branch <b>Late Russian 650CC and 720CC boxers (since 1991)</b>
        \n- adding of branch <b>Modern Russian 750CC boxers (since 1998)</b>
        \n- adding of M-52 model:
        \n
        \n- adding of different electrical parts:
        \n-    ignition systems
        \n-    ignition coils
        \n-    ignition HT leads and spark plugs cups
        \n-    toggles / switchs
        \n-    electrical brushes for alternators and generators
        \n-    light bulbs
        \n-    batteries
        \n
        \n- adding of more detailed information about recommended motor and gear oils
        \n- adding of recommended greases
        \n- adding of tyres and tyres inner tubes
        \n- adding of carburetors
        \n- adding of parts of motors, gearboxes, final drives, frames and wheels
        \n
        \n- adding of links to spare parts for buying or adding of possibility of making
        purchases from app
    </string>
    <string name="about_app_text25">
        You can report about bug or error in application, ask a questions, express your wishes
        or claims to app to my
    </string>
    <string name="about_app_text26">or Facebook</string>
    <string name="calendar_november_2017">Calendar November 2017 Rus</string>
    <string name="calendar_november_2017_ukr">Calendar November 2017 Ukr</string>
    <string name="different_2">2 different</string>
    <string name="no">No</string>
    <string name="no_content">Maybe it will be available later</string>
    <string name="note_to_dimencions">Note to dimencions</string>
    <string name="some_spare_parts">Some spare parts</string>
    <string name="part_name">Part name</string>
    <string name="button_M72">M-72</string>
    <string name="button_M72M">M-72M</string>
    <string name="button_M72N">M-72H</string>
    <string name="button_K750">K-750</string>
    <string name="button_K750B">K-750B</string>
    <string name="button_K750M">K-750M</string>
    <string name="button_MV750">MB-750</string>
    <string name="button_MV750M">MB-750M</string>
    <string name="button_mt12">Днепр МТ-12</string>
    <string name="button_M52">M52 (500СС)</string>
    <string name="button_M61">M61 Ирбит</string>
    <string name="button_M62">M62 Урал</string>
    <string name="button_M63">M63 Урал-2</string>
    <string name="button_M66">M66 Урал-3</string>
    <string name="button_M67">M67 Урал</string>
    <string name="button_M67_36">M67-36 Урал</string>
    <string name="button_IMZ8103_30">ИМЗ-8.103-30</string>
    <string name="button_IMZ8103_10">ИМЗ-8.103-10</string>
    <string name="button_K650">K650 Днепр (МТ-8)</string>
    <string name="button_MT9">Днепр MТ-9</string>
    <string name="button_MT10">Днепр MТ-10</string>
    <string name="button_MT10_36">Днепр МТ-10-36</string>
    <string name="button_MV650">МВ-650</string>
    <string name="button_MV650M">МВ-650М</string>
    <string name="button_MT11">Днепр МТ-11</string>
    <string name="button_MT16">Днепр MT-16</string>
    <string name="engine">Engine</string>
    <string name="gearbox">Gearbox</string>
    <string name="final_drive">Final drive</string>
    <string name="sidecar_reduction_drive">Sidecar reduction drive</string>
    <string name="frame_and_wheels">Frame and wheels</string>
    <string name="generator">Generator</string>
    <string name="motorcycle_models_list">Models list</string>
    <string name="all_650CC_kmz_models">All 650СС КМЗ models</string>
    <string name="all_650CC_imz_models">All 650СС ИМЗ models</string>
    <string name="all_sv_models">All SV models</string>
    <string name="all_soviet_boxers">All the Soviet boxers</string>
    <string name="original_part">Original part</string>
    <string name="type">Type</string>
    <string name="dimencions">Dimencions, mm</string>
    <string name="modern_replacement">Replacer</string>
    <string name="modern_replacement_1">Replacer 1</string>
    <string name="modern_replacement_2">Replacer 2</string>
    <string name="modern_replacement_3">Replacer 3</string>
    <string name="features_of_construction">Feautures of construction</string>
    <string name="manufacturer_or_tm">Manufacturer or trade mark</string>
    <string name="bearing">Bearing</string>
    <string name="number">Number</string>
    <string name="bearing_type_ball_radial">
        - ball \n- single raw \n- radial \n- open
    </string>
    <string name="bearing_type_ball_2row_radial_thrust">
        - ball \n- 2 raw \n- radial-thrust \n- open
    </string>
    <string name="bearing_200">Bearing 200</string>
    <string name="cage_polyamide">Solid polyamide snap cage, ball guided</string>
    <string name="bearing_3086304">Bearing 3086304Л</string>
</resources>