<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|start">


    <TableLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:stretchColumns="*"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center"
                android:text="@string/bearing"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView52"
                android:layout_width="wrap_content"
                android:layout_height="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/number"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:gravity="center|start"
                android:text="3304B.TVH"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textViesswdd28"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/manufacturer_or_tm"
                android:textAlignment="textStart"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tssextView27ddg"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:gravity="center|start"
                android:text="FAG"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView268"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView267"
                android:layout_width="100dp"
                android:layout_height="66dp"
                android:gravity="center|start"
                android:text="@string/bearing_type_ball_2row_radial_thrust"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView288"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/features_of_construction"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView287"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center|start"
                android:text="@string/cage_polyamide"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView58"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/dimencions"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView217"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center|start"
                android:text="20x52x22,2"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView52hg"
                android:layout_width="wrap_content"
                android:layout_span="3"
                android:layout_height="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2rt"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_span="3"
                app:srcCompat="@drawable/bearing3304_fag" />
        </TableRow>

    </TableLayout>

</RelativeLayout>