<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|start">


    <TableLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:stretchColumns="*"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_span="3"
                android:gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center"
                android:text="@string/bearing_3086304"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/original_part"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="130dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="3086304Л"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView268"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView267"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:gravity="center|start"
                android:text="@string/bearing_type_ball_2row_radial_thrust"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView58"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/dimencions"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView217"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="20x52x22,2"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2gg88"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/modern_replacement"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViegggw287"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="5304"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView288"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/modern_replacement_1"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView287"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="3304"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView11843158"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/modern_replacement_2"
                android:textAlignment="textStart"
                android:textSize="12sp" />


            <Button
                android:id="@+id/button_replacer"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="FAG 3304B.TVH"
                android:textAlignment="gravity"
                android:textSize="10sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textrrView2gg88"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/modern_replacement_3"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textwwViegggw287"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="BMW 07119982468"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2rt"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_span="3"
                app:srcCompat="@drawable/bearing_3086304l" />
        </TableRow>



    </TableLayout>

</RelativeLayout>