<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|start">


    <TableLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:stretchColumns="*"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_span="3"
                android:gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center"
                android:text="@string/bearing_200"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/original_part"
                android:textAlignment="textStart"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="130dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="200"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView268"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type"
                android:textAlignment="textStart"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView267"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/bearing_type_ball_radial"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView58"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/dimencions"
                android:textAlignment="textStart"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView217"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="10x30x9"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView288"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/modern_replacement"
                android:textAlignment="textStart"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView287"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="6200"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView28kkkl8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/modern_replacement_1"
                android:textAlignment="textStart"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView2hkk87"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:gravity="center|start"
                android:text="6200-2RS (6200ZZ, 6200DDU)"
                android:textAlignment="viewStart"
                android:textSize="10sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView52hg"
                android:layout_width="wrap_content"
                android:layout_span="3"
                android:layout_height="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2rt"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_span="3"
                app:srcCompat="@drawable/bearing_200" />
        </TableRow>

    </TableLayout>

</RelativeLayout>